--- a/work/student-life.html
+++ b/work/student-life.html
@@ -46,50 +46,58 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        While studying at Carnegie Mellon University, I had the unique opportunity to be a part of the residential experience.
-                        After witnessing the impact of my own RA (Resident Assistant) and Residential House Staff during my freshman year, I applied
-                        for the RA role in my sophomore and junior years. In between these two years, I also worked a similar role over the summer as
-                        a Pre-College Counselor for visiting high school students. In my senior year, I worked as a Community Advisor, whom has the
-                        special role of overseeing the full house community's operation, supervising the RAs in the building, and working alongside
-                        the professional Housefellow of the community.
+                        While studying at Carnegie Mellon University, I had the unique opportunity to be a part of the
+                        residential experience. After witnessing the impact of my own RA (Resident Assistant) and
+                        Residential House Staff during my freshman year, I applied for the RA role in my sophomore and
+                        junior years. In between these two years, I also worked a similar role over the summer as a
+                        Pre-College Counselor for visiting high school students. In my senior year, I worked as a
+                        Community Advisor, whom has the special role of overseeing the full house community's operation,
+                        supervising the RAs in the building, and working alongside the professional Housefellow of the
+                        community.
                     </p>
                 </div>
             </div>
             <div class="row" id="community-advisor">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        <b>Community Advisor:</b> The Community Advisor (CA) role is a unique one not offered at many universities or
-                        other residential programs. The CA role is more than a "promoted/senior RA"; the CA is also a partner to the Housefellow in
-                        order to keep the house community running successfully day-to-day. In my role, I was the CA for an apartment-style living
-                        community of 261 upperclassmen residents and 8 RAs, all working together to bring a traditionally separated community together
-                        through event programming, community engagement, and opportunities for growth. Some highlights of this role include planning large
-                        outings for our residents (eg. apple picking, paintball), coordinating and running weekly meetings for the residential team, and
-                        managing an $8000 yearly budget for educational programs for residents (main topics included: professional development,
-                        health and wellness, environmentialism, and diversity &amp; inclusion).
+                        <b>Community Advisor:</b> The Community Advisor (CA) role is a unique one not offered at many
+                        universities or other residential programs. The CA role is more than a "promoted/senior RA"; the
+                        CA is also a partner to the Housefellow in order to keep the house community running
+                        successfully day-to-day. In my role, I was the CA for an apartment-style living community of 261
+                        upperclassmen residents and 8 RAs, all working together to bring a traditionally separated
+                        community together through event programming, community engagement, and opportunities for
+                        growth. Some highlights of this role include planning large outings for our residents (eg. apple
+                        picking, paintball), coordinating and running weekly meetings for the residential team, and
+                        managing an $8000 yearly budget for educational programs for residents (main topics included:
+                        professional development, health and wellness, environmentialism, and diversity &amp; inclusion).
                     </p>
                 </div>
             </div>
             <div class="row" id="resident-assistant">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        <b>Resident Assistant:</b> In this role I provided leadership to about 600 students (<i>sophomore year:</i>
-                        381 upperclassmen &amp; graduate students; <i>junior year:</i> 209 freshmen students) in both apartment-style and dormitory living,
-                        with my floor containing 40-52 students. I created and promoted many specialized events for my residents to promote personal
-                        development and continued learning, including events where residents cooked dinners from all around the world together,
-                        personal sessions where I taught a series of audio technology and production skills to residents, and trips to get out to visit
-                        the local festivals of Pittsburgh (Light Up Night).
+                        <b>Resident Assistant:</b> In this role I provided leadership to about 600 students
+                        (<i>sophomore year:</i> 381 upperclassmen &amp; graduate students; <i>junior year:</i> 209 freshmen
+                        students) in both apartment-style and dormitory living, with my floor containing 40-52 students.
+                        I created and promoted many specialized events for my residents to promote personal development
+                        and continued learning, including events where residents cooked dinners from all around the
+                        world together, personal sessions where I taught a series of audio technology and production
+                        skills to residents, and trips to get out to visit the local festivals of Pittsburgh, like
+                        <a href="https://en.wikipedia.org/wiki/Light_Up_Night">Light Up Night</a>.
                     </p>
                 </div>
             </div>
             <div class="row" id="pre-college">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        <b>Pre-College Counselor:</b> The Pre-College Program at Carnegie Mellon University allows current high school students the
-                        opportunity to experience an undergraduate college experience for 6 weeks during the summer. In line with college experience, I was
-                        hired as a counselor for the program, acting mostly as an RA for the 550 high school students under a total staff of 41. While many of
-                        the skills and events carried over from the RA experience, there are some differences when working with minors. Overall, this was an
-                        amazing experience that I wish I had known about sooner, and it was very fulfilling to see my residents graduate from the program and
-                        are now starting out in their first few years of university.
+                        <b>Pre-College Counselor:</b> The Pre-College Program at Carnegie Mellon University allows
+                        current high school students the opportunity to experience an undergraduate college experience
+                        for 6 weeks during the summer. In line with college experience, I was hired as a counselor for
+                        the program, acting mostly as an RA for the 550 high school students under a total staff of 41.
+                        While many of the skills and events carried over from the RA experience, there are some
+                        differences when working with minors. Overall, this was an amazing experience that I wish I had
+                        known about sooner, and it was very fulfilling to see my residents graduate from the program and
+                        help them experience their first few years of university.
                     </p>
                 </div>
             </div>
